Added endpoint for listing publications
